# go-check-spam

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  fib.go  fib_test.go  gmailauth.go  gmailauth_test.go  go.mod  go.sum  main.go  main_test.go
.codewhale/: instructions.md
.github/workflows/: go.yml  rust.yml
Sources/SwiftCheckSpam/: AppError.swift  GmailAuth.swift  GmailService.swift  Models.swift  SwiftCheckSpam.swift  main.swift
cmd/gocheckspam/: main.go
internal/auth/: auth.go
internal/config/: config.go
internal/gmail/: gmail.go
internal/gmail/fake/: fake.go
internal/reporter/: reporter.go  reporter_test.go
internal/retry/: retry.go  retry_test.go
internal/spam/: spam.go  spam_test.go
src/: auth.rs  errors.rs  gmail.rs  lib.rs  main.rs
tests/: main_test.go
