[package]
name = "rcheckspam"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
futures = "0.3"
open = "5.1"
