[package]
name = "gocheckspam"
version = "0.1.0"
edition = "2021"
description = "CLI to count Gmail Spam messages by local date (based on internalDate)"

[[bin]]
name = "gocheckspam"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"

[dev-dependencies]
